--- a/package.json
+++ b/package.json
@@ -27,13 +27,6 @@
     "build": "tsc -d",
     "build-test": "babel tests --out-dir tests --extensions \".ts\""
   },
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "babel-preset-minify": "^0.5.0"
-  },
+  "devDependencies": {},
   "dependencies": {}
 }
