--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.2",
   "description": "Safely accessing deeply nested values in JavaScript",
   "main": "./dist/index.js",
-  "directories": {
-    "dist": "dist"
-  },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "props",
     "propx",
