--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "license": "MIT",
   "scripts": {
+    "clean": "rm -rf ./dist",
     "test": "echo \"Error: no test specified\"",
     "build-babel": "babel src --out-dir dist --extensions \".ts\"",
-    "build": "tsc -d",
-    "prepublish": "rm -rf ./dist && npm run build",
+    "build": "npm run clean && tsc -d",
+    "prepublish": "npm run clean && npm run build",
     "build-test": "babel tests --out-dir tests --extensions \".ts\""
   },
   "devDependencies": {},
